JDK 16/17 Compatability changes - swapped out deprecated API calls for ones that are acceptable to later versions of the JDK 	modified:   src/com/ansi/scilla/web/common/servlet/AbstractServlet.java 	modified:   src/com/ansi/scilla/web/tags/AbstractInput.java 	modified:   src/com/ansi/scilla/web/tags/HasWrite.java